--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
         <div class="list">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Project</a></li>
-                <li><a href="">More Info</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="basic.html">Basic</a></li>
+                <li><a href="">Academic</a></li>
+                <li><a href="">Process</a></li>
+                <li><a href="">Viewpoint</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
@@ -103,12 +103,13 @@
                     製作時間：2022.07.01~2022.07.10
                 </div>
                 <div class="intro-text-4">
-                    作品傳送門：<a href="https://sc1314520.github.io/SCJ.github.io/">點擊連結</a>
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/">點擊連結</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="more-info">
+        <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
         <h1><a target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">Student's FeedBack</a></h1>
         <div class="info-text">
         <div class="feedback">
@@ -147,6 +148,13 @@
         </div>
     </div>
 </div>
-    <div class="contact"></div>
+    <div class="contact">
+        <div class="contact-img"> 
+            <img src="images/logo.png" alt="">
+        </div>
+        <div class="contact-text">
+            <span class="contact-title">電子信箱： </span> blc0000421@gmail.com
+        </div>
+    </div>
 </body>
 </html>
