--- a/basic.html
+++ b/basic.html
@@ -107,19 +107,8 @@
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p>我記得是高一剛開學就追蹤你了，那時候的限動的確每天都很多則，但我覺得很中肯很
-                    直接很real，每次那個字都很小我都要慢慢看。追蹤兩年半的時間我覺得可能你的火爆
-                    個性有改一點點😂 但那個幫助人的心還是不變的 👍
-                    然後之前你分享很多的那些筆記資源呀 真的很實用，還好那些有典藏的我之前有先截
-                    圖(應該沒關係吧...沒外流)，謝謝你！ 這些資源在學測的路上幫我很大。 我記得還有一
-                    個以前你很常半夜凌晨發限動😂 現在好像比較少了
-                    可以回fb發😂
-                    紫色在手機上看是真的有點亮(關燈在床上看)
-                    心得紀錄有時候嗆別人的很有趣(心情不好的時候最適合看) , 有時候又是很有深度的言
-                    論🤔
-                    那個之後9月我也會變大學生了
-                    我也可以跟你領取普物普化的筆記嗎🤗
-                    可惜我是男的在離公館超近，但約出來吃蛋糕感覺怪怪特別的😂😂</p>
+                <p>我記得是高一剛開學就追蹤你了，那時候的限動的確每天都很多則，但我覺得很中肯很直接很real，每次那個字都很小我都要慢慢看。追蹤兩年半的時間我覺得可能你的火爆個性有改一點點😂 但那個幫助人的心還是不變的 👍 然後之前你分享很多的那些筆記資源呀 真的很實用，還好那些有典藏的我之前有先截圖(應該沒關係吧...沒外流)，謝謝你！ 這些資源在學測的路上幫我很大。 我記得還有一個以前你很常半夜凌晨發限動😂 現在好像比較少了可以回fb發😂
+                    紫色在手機上看是真的有點亮(關燈在床上看)心得紀錄有時候嗆別人的很有趣(心情不好的時候最適合看) , 有時候又是很有深度的言論🤔那個之後9月我也會變大學生了我也可以跟你領取普物普化的筆記嗎🤗 可惜我是男的在離公館超近，但約出來吃蛋糕感覺怪怪特別的😂😂</p>
             </div>
         </div>
         <div class="feedback">
