--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="basic.html">Basic</a></li>
-                <li><a href="">Academic</a></li>
-                <li><a href="">Process</a></li>
+                <li><a href="academic.html">Academic</a></li>
+                <li><a href="">Future</a></li>
                 <li><a href="">Viewpoint</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
