--- a/academic.html
+++ b/academic.html
@@ -331,7 +331,7 @@
     </div>
     <div class="study">
         <span class="study-more"><a target="_blank" href="https://drive.google.com/drive/folders/1CSuPL0ntk2vnfuQyJYL-6JZQMLXeUMyn?usp=sharing">觀看更多--></a></span>
-        <h1>My Reading Plan</h1>
+        <h1>My Studying Plan</h1>
         <div class="study-content">
             <div class="study-img">
                 <img src="images/STUDY.png" alt="">
