--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/logo-svg.svg">
     <title>Lemon Lin | My personal Web</title>
 </head>
 <body>
