--- a/academic.html
+++ b/academic.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/academic.css">
+    <link rel="icon" href="images/logo-svg.svg">
     <title>Lemon Lin | My Academic Infomation</title>
 </head>
 
