--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- js -->
+    <script src="js/jquery2.2.3.min.js"></script>
+    <script src="js/index.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="images/logo-svg.svg">
     <title>Lemon Lin | My personal Web</title>
@@ -29,13 +32,13 @@
     </div>
     <div class="home">
         <img src="images/home-1.JPG" alt="">
-        <div class="home-text">
+        <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
     </div>
     <div class="about">
-        <h1>About ME</h1>
+        <h1 class="animate__animated">About ME</h1>
         <p>Pursue my ideals and face our own life with enthusiasm.</p>
         <div class="about-block">
             <ul>
@@ -55,40 +58,51 @@
         </div>
     </div>
     <div class="skills">
-        <h1>Talent skills</h1>
+        <h1 class="animate__animated">Talent skills</h1>
         <ul>
             <li>
                 <img src="images/html.png" alt="">
+                <div class="skill-text">HTML 5</div>
             </li>
             <li>
                 <img src="images/css.png" alt=""> 
+                <div class="skill-text">CSS 3</div>
             </li>
             <li>
                 <img src="images/RWD.png" alt=""> 
+                <div class="skill-text">RWD</div>
             </li>
             <li>
                 <img src="images/javascript.png" alt="">
+                <div class="skill-text">JavaScript</div>
             </li>
             <li>
-                <img src="images/bootstrap.png" alt="">  
+                <img src="images/bootstrap.png" alt="">
+                <div class="skill-text">BootStrap</div>  
             </li>
             <li>
-                <img class="vue" src="images/vue.png" alt="">  
+                <img class="vue" src="images/vue.png" alt=""> 
+                <div class="skill-text">Vue.js</div> 
             </li>
             <li>
                 <img src="images/java.png" alt=""> 
+                <div class="skill-text">Java</div>
             </li>
             <li>
                 <img src="images/mySQL.png" alt="">
+                <div class="skill-text">MySQL</div>
             </li>
         </ul>
     </div>
     <div class="project">
-        <h1>Recent Project</h1>
-        <p>See more about these on my <a href="">GitHub</a></p>
-        <div class="content">
+        <h1 class="animate__animated">Recent Project</h1>
+        <p>See more about these on my <a href="https://github.com/SC1314520">GitHub</a></p>
+        <div class="content animate__animated">
             <div class="href">
                 <img src="images/html:css.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
             </div>
             <div class="introduction">
                 <div class="intro-text">
