--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
                 </div>
             </div>
         </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/RWD-W.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>第二樣：六角西餐廳</h1>
+                    <p>前端工程學習過程中的第一份響應式設計作品</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：HTML標籤<br/>
+                    重點運用：Responsive Web Design 響應式網頁設計。<br/>
+                    動畫設計：CSS/jQuery等語法運用。<br/>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.18~2022.07.22
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
