--- a/basic.html
+++ b/basic.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/basic.css">
-    <link rel="icon" href="images/logo-svg.svg">
+    <link rel="icon" href="images/track-cat-svgrepo-com.svg">
     <title>Lemon Lin | My Basic Infomation</title>
 </head>
 
