--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="images/logo-svg.svg">
+    <link rel="icon" href="images/track-cat-svgrepo-com.svg">
     <title>Lemon Lin | My personal Web</title>
 </head>
 <body>
