--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="basic.html">Basic</a></li>
                 <li><a href="academic.html">Academic</a></li>
-                <li><a href="">Future</a></li>
+                <li><a href="process.html">Process</a></li>
                 <li><a href="">Viewpoint</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
@@ -140,7 +140,7 @@
                     動畫設計：CSS/jQuery等語法運用。<br/>
                 </div>
                 <div class="intro-text-3">
-                    製作時間：2022.07.18~2022.07.22
+                    製作時間：2022.07.18~2022.07.19
                 </div>
                 <div class="intro-text-4">
                     作品傳送門：<a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/">點擊連結</a>
