--- a/process.html
+++ b/process.html
@@ -87,27 +87,28 @@
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p>我記得是高一剛開學就追蹤你了，那時候的限動的確每天都很多則，但我覺得很中肯很直接很real，每次那個字都很小我都要慢慢看。追蹤兩年半的時間我覺得你那個幫助人的心還是不變的 👍 然後之前你分享很多的那些筆記資源呀 真的很實用，還好那些有典藏的我之前有先截圖(應該沒關係吧...沒外流)，謝謝你！ 這些資源在學測的路上幫我很大。 我記得還有一個以前你很常半夜凌晨發限動😂 現在好像比較少了可以回fb發😂
-                    紫色在手機上看是真的有點亮(關燈在床上看)心得紀錄有時候嗆別人的很有趣(心情不好的時候最適合看) , 有時候又是很有深度的言論🤔那個之後9月我也會變大學生了我也可以跟你領取普物普化的筆記嗎🤗 可惜我是男的在離公館超近，但約出來吃蛋糕感覺怪怪特別的😂😂</p>
+                <p>我覺得SC的解法是比較跳脫傳統框架的，不同於課本講義單一的解法，而且會統合各個章
+                    節所學，找到最快速的解法，而非僅僅是使用該章節的公式去解題，與多數高中生在物理學
+                    習方面有很大的不同，我覺得這是多數人欠缺的能力，更加凸顯了你的出眾。
+                    </p>
             </div>
         </div>
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p> 我覺得這個帳號跟其他帳號都很不同，同時也因為不會和其他帳號重複性太高，所以我才會
-                    選擇追蹤。高一的時候我還滿不喜歡物理的，而且同時也因為學的不夠深，基本上每次的內
-                    容我都沒有參與，但我還是看完了，漸漸的，也慢慢對物理產生興趣，對各種不一樣的解法
-                    產生好奇，而且你願意花時間幫助大家解題，提供大家各種升學資訊，對我幫助很大。前陣
-                    子看到限動上說有人批評這個帳號不像讀書帳時，覺得感觸滿多的，也希望這個帳號不要改
-                    變，正因為這個帳號的不同，所以我才會願意花時間看，希望你能一直堅持下去。
+                <p> 對我來說我覺得是一個學習的典範，因為看到SC每天寫題目，數量還不少~我才跟著努力
+                    的。我自認為我很努力了，結果看到一個更努力的人，因此想超越，也才發現自己的努力更
+                    本不算什麼。而且我覺得學物理觀念正確很重要，而SC就分享的很清楚，感覺找到了一個好老師。
                   </p>
             </div>
         </div>
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p>晚上好~我也是潛水的粉絲🙋，剛剛看了你的直播講了許多故事，最後決定也浮出水面一下(?)很謝謝你帶給大家很多資源還有在高一高二時讓我更有動力讀書(因為限動真的蠻多的哈哈)。之前也有跟到戴蛙鏡的直播XDD
-                    很可惜那時隔天有事不能跟到最後，總而言之真的很感謝!!BTW,剛剛聽你提到明天要去淡水玩，我是淡水人，建議多穿一點才能在雨中享受浪漫(?)下雨+冬天真的又濕又冷，如果出太陽的話可以騎腳踏車去漁人碼頭，風景也很不錯!最後，祝你未來能在遇到難關時一一破解。新年快樂🎉
+                <p>我自己高中時期的物理很差，原則上就是全科最弱，當時也確實花費了很多在物理上，然而
+                    成績依舊沒什麼起色。上大學後回顧了以往讀物理的方式，認為自己終究只是死記硬背公
+                    式，沒有實際了解內容，導致自己只會解表層的題目罷了。後來看到你在限動解題獨特的方
+                    式，都會有“竟然有這樣的解題技巧”的感想，讓我用不同的視角看待物理。
                     </p>
             </div>
         </div>
