--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="basic.html">Basic</a></li>
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
-                <li><a href="">Viewpoint</a></li>
+                <li><a href="">Plan</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
@@ -106,11 +106,12 @@
             </div>
             <div class="introduction">
                 <div class="intro-text">
-                    <h1>第一樣：六角學院初體驗</h1>
+                    <h1>作品一：六角學院初體驗</h1>
                     <p>前端工程學習過程中的第一份排版成品</p>
                 </div>
                 <div class="intro-text-2">
-                    基本技巧：HTML標籤<br/>
+                    基本技巧：HTML/CSS<br/>
+                    程式運用：VSCode <br>
                     重點運用：Flex排版技巧、Position定位、Table製作、第三方Plugin善用等等。<br/>
                     動畫設計：CSS/jQuery等語法運用。<br/>
                 </div>
@@ -131,11 +132,12 @@
             </div>
             <div class="introduction">
                 <div class="intro-text">
-                    <h1>第二樣：六角西餐廳</h1>
+                    <h1>作品二：六角西餐廳</h1>
                     <p>前端工程學習過程中的第一份響應式設計作品</p>
                 </div>
                 <div class="intro-text-2">
-                    基本技巧：HTML標籤<br/>
+                    基本技巧：RWD<br/>
+                    程式運用：VSCode <br>
                     重點運用：Responsive Web Design 響應式網頁設計。<br/>
                     動畫設計：CSS/jQuery等語法運用。<br/>
                 </div>
@@ -144,6 +146,57 @@
                 </div>
                 <div class="intro-text-4">
                     作品傳送門：<a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/sass.png" alt="">
+                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術一： SASS/SCSS 彙整</h1>
+                    <p>將以往的 css 撰寫法轉換為簡潔與分類管理的方式編寫。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：CSS/RWD<br/>
+                    程式運用：Prepros / Sublime <br/>
+                    重點運用：Sass/Scss/mixin/content/$<br/>
+                    額外新增：RWD 熱門斷點 mixin 函式庫。
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.23
+                </div>
+                <div class="intro-text-4">
+                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/psc.gif" alt="">
+                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術二：滾動視差網頁設計</h1>
+                    <p>利用動畫效果的方式使得閱覽者在觀看網頁時，擁有視差體驗。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：CSS/JavaScript/JQuery<br/>
+                    程式運用：VScode<br/>
+                    重點運用：背景固定/矛點滾動/指定位置顯示/進度條動畫/滾動視差效果<br/>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.23
+                </div>
+                <div class="intro-text-4">
+                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller">點擊連結</a>
                 </div>
             </div>
         </div>
