--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="basic.html">Basic</a></li>
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
-                <li><a href="">Plan</a></li>
+                <li><a href="plan.html">Plan</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
