--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -69,8 +69,16 @@
                 <div class="skill-text">CSS 3</div>
             </li>
             <li>
+                <img src="images/pngegg.png" alt=""> 
+                <div class="skill-text">JQuery</div>
+            </li>
+            <li>
                 <img src="images/RWD.png" alt=""> 
                 <div class="skill-text">RWD</div>
+            </li>
+            <li>
+                <img src="images/sass-logo.png" alt=""> 
+                <div class="skill-text">Sass</div>
             </li>
             <li>
                 <img src="images/javascript.png" alt="">
@@ -177,7 +185,7 @@
         </div>
         <div class="content animate__animated">
             <div class="href">
-                <img src="images/psc.gif" alt="">
+                <img src="images/four.jpeg" alt="">
                 <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller"><div class="content-img-text">
                     <span class="content-img-text-1">前往頁面</span>
                 </div></a>
@@ -241,7 +249,7 @@
         </div>
     </div>
 </div>
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="contact-img"> 
             <img src="images/logo.png" alt="">
         </div>
