--- a/academic.html
+++ b/academic.html
@@ -23,7 +23,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -403,7 +403,7 @@
         </div>
 
     </div>
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="contact-img">
             <img src="images/logo.png" alt="">
         </div>
