--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
                 <li><a href="academic.html">Academic</a></li>
                 <li><a href="process.html">Process</a></li>
                 <li><a href="plan.html">Plan</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -114,7 +114,7 @@
         </div>
     </div>
 </div>
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="contact-img">
             <img src="images/logo.png" alt="">
         </div>
