--- a/plan.html
+++ b/plan.html
@@ -10,7 +10,9 @@
     <link rel="icon" href="images/cat-kitty-kitten-feline-svgrepo-com.svg">
     <title>Lemon Lin | My Basic Infomation</title>
 </head>
-
+<script>
+    document.getElementById('vid').play();
+</script>
 <body>
     <div class="header">
         <div class="img">
@@ -62,17 +64,17 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>JavaScript</h2>
-                    <h4>2022.07.24~2022.08.06</h4>
+                    <h4>2022.07.24~2022.07.27</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>DOM/AJAX</h2>
-                    <h4>2022.08.07~2022.08.20</h4>
+                    <h4>2022.07.28~2022.08.02</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>JavaScript延伸與複習</h2>
-                    <h4>2022.08.21~2022.09.30</h4>
+                    <h4>2022.08.03~2022.09.30</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
