--- a/process.html
+++ b/process.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- js -->
+    <script src="js/jquery2.2.3.min.js"></script>
+    <script src="js/index.js"></script>
+    <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/process.css">
     <link rel="icon" href="images/cat-kitty-kitten-feline-svgrepo-com.svg">
     <title>Lemon Lin | My Academic Infomation</title>
@@ -28,7 +33,7 @@
     </div>
     <div class="home">
         <img src="images/IMG_2768.JPG" alt="">
-        <div class="home-text">
+        <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
