--- a/index.html
+++ b/index.html
@@ -208,6 +208,32 @@
                 </div>
             </div>
         </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/swing.png" alt="">
+                <a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品三：Swing 不確定度傳遞計算機</h1>
+                    <p>利用視窗程式解決普物實驗最為痛苦的數據分析過程</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java/JFrame事件設計<br/>
+                    程式運用：Netbeans <br>
+                    系統特色：大幅度縮短實驗後所需花費的數據分析時間。<br/>
+                    系統帳號：SCHJ、系統密碼：1314520
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.27
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing">點擊連結</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
