--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                     <div class="img-text">前端企業實習生</div>
                 </li>
                 <li><img src="images/back-end.png" alt="">
-                    <div class="img-text">後端工程研習生</div>
+                    <div class="img-text">OCPJP 程式設計師</div>
+                </li>
+                <li><img src="images/fans.png" alt="">
+                    <div class="img-text">十萬粉絲帳號共同創辦人</div>
                 </li>
             </ul>
         </div>
@@ -231,6 +234,32 @@
                 </div>
                 <div class="intro-text-4">
                     作品傳送門：<a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/ocpjp.png" alt="">
+                <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術三：Oracle Certified Professional SE 11</h1>
+                    <p>Java OCPJP SE11 1z0-819 國際級程設專業認證個人資料庫</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java OCPJP<br/>
+                    程式運用：Eclipse / Netbeans <br>
+                    版本使用：Java JDK 11<br/>
+                    建立者：SC_Lemon
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.18~持續中。
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07">點擊連結</a>
                 </div>
             </div>
         </div>
