--- a/index.html
+++ b/index.html
@@ -263,6 +263,30 @@
                 </div>
             </div>
         </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/dom.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/analyze.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品四：不確定度傳遞計算機網頁版</h1>
+                    <p>利用JavaScript與DOM概念所建立的簡易小工具。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：JavaScript/DOM<br/>
+                    程式運用：VScode <br>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.29。
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/analyze.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
