--- a/index.html
+++ b/index.html
@@ -61,47 +61,69 @@
         </div>
     </div>
     <div class="skills">
-        <h1 class="animate__animated">Talent skills</h1>
+        <div class="mark1"></div>
+        <div class="mark2"></div>
+        <h1 class="animate__animated">Skills</h1>
         <ul>
             <li>
                 <img src="images/html.png" alt="">
                 <div class="skill-text">HTML 5</div>
+                <div class="level">精熟</div>
             </li>
             <li>
                 <img src="images/css.png" alt=""> 
                 <div class="skill-text">CSS 3</div>
-            </li>
-            <li>
-                <img src="images/pngegg.png" alt=""> 
-                <div class="skill-text">JQuery</div>
+                <div class="level">精熟</div>
             </li>
             <li>
                 <img src="images/RWD.png" alt=""> 
                 <div class="skill-text">RWD</div>
+                <div class="level">精熟</div>
             </li>
             <li>
+                <img src="images/pngegg.png" alt=""> 
+                <div class="skill-text">JQuery</div>
+                <div class="level2">基礎</div>
+            </li>
+            <li style="display: none;">
                 <img src="images/sass-logo.png" alt=""> 
                 <div class="skill-text">Sass</div>
+                <div class="level">精熟</div>
             </li>
             <li>
                 <img src="images/javascript.png" alt="">
                 <div class="skill-text">JavaScript</div>
+                <div class="level2">學習</div>
             </li>
             <li>
                 <img src="images/bootstrap.png" alt="">
-                <div class="skill-text">BootStrap</div>  
+                <div class="skill-text">BootStrap</div>
+                <div class="level2">學習</div>  
             </li>
-            <li>
+            <li style="display: none;">
                 <img class="vue" src="images/vue.png" alt=""> 
-                <div class="skill-text">Vue.js</div> 
+                <div class="skill-text">Vue.js</div>
+                <div class="level2">學習</div>
             </li>
             <li>
                 <img src="images/java.png" alt=""> 
                 <div class="skill-text">Java</div>
+                <div class="level">精熟</div>
+            </li>
+            <li>
+                <img src="images/Curso-de-Java-EE.png"  alt=""> 
+                <div class="skill-text">JavaEE</div>
+                <div class="level2">學習</div>
+            </li>
+            <li>
+                <img src="images/spring-framework-logo-115631739970c79rwadnp-removebg-preview.png"  alt="">
+                <div class="skill-text">Spring</div>
+                <div class="level2">學習</div>
             </li>
             <li>
                 <img src="images/mySQL.png" alt="">
                 <div class="skill-text">MySQL</div>
+                <div class="level2">學習</div>
             </li>
         </ul>
     </div>
