--- a/plan.html
+++ b/plan.html
@@ -43,7 +43,7 @@
         <h1>Plan for My dream</h1>
         <div class="main-box">
             <div class="fed">
-                <h1>Front-End Developer</h1>
+                <h1>Front-End Develope (副修）</h1>
                 <div class="session-box">
                     <h2>Html/CSS</h2>
                     <h4>2022.07.01~2022.07.07</h4>
@@ -71,12 +71,12 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>DOM/AJAX</h2>
-                    <h4>2022.07.31~2022.08.06</h4>
+                    <h4>2022.07.31~2022.08.13</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>JavaScript延伸與複習</h2>
-                    <h4>2022.08.07~2022.09.30</h4>
+                    <h4>2022.08.14~2022.09.30</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
@@ -90,42 +90,12 @@
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
-                    <h2>JavaScript 核心</h2>
-                    <h4>2023.01.21~2023.02.20</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>Vue.js</h2>
+                    <h2>排版作品集</h2>
                     <h4>2023.07.01~2023.08.31</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>TypeScript</h2>
-                    <h4>2024.01.21~2024.02.20</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>React</h2>
-                    <h4>2024.07.01~2024.08.30</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box fc-box">
-                    <h2>前端工程師企業實習（二）</h2>
-                    <h4>2024.07.01~2024.12.31</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>Angular</h2>
-                    <h4>2025.01.21~2025.02.20</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>大學畢業</h2>
-                    <h4>2025.06.30</h4>
                 </div>
             </div>
             <div class="bed">
-                <h1>Back-End Developer</h1>
+                <h1>Back-End Developer（主修）</h1>
                 <div class="split">
                 <div class="left">
                     <h2>交互學習一</h2>
@@ -136,8 +106,18 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc2-box">
                     <h2>Java SE 8 重點複習</h2>
-                    <h4>2022.08.22~2023.09.26</h4>
+                    <h4>2022.07.18~2022.08.22</h4>
                 </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc2-box">
+                        <h2>Java SE 11 考前衝刺</h2>
+                        <h4>2022.08.23~2022.09.20</h4>
+                    </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc-box">
+                        <h2> Java OCPJP SE 11 國證</h2>
+                        <h4>2023.09</h4>
+                    </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>Java OCE JWCD （一）</h2>
@@ -147,11 +127,6 @@
                 <div class="session-box">
                     <h2>Java Spring （一）</h2>
                     <h4>2022.10.23~2022.12.25</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box fc2-box">
-                    <h2>Java SE 11 刷題與修煉</h2>
-                    <h4>2022.12.26~2023.06.30</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc2-box">
@@ -187,19 +162,14 @@
                         <h4>2023.03.17~2023.05.22</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
-                    <div class="session-box fc2-box">
-                        <h2>Java SE 11 考前衝刺</h2>
-                        <h4>2023.05.23~2023.06.30</h4>
-                    </div>
-                    <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
-                        <h2> Java OCPJP SE 11 國證</h2>
-                        <h4>2023.07</h4>
+                        <h2> Java OCE JWCD 國證</h2>
+                        <h4>2024.06</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
                         <h2> Java 企業專題實作</h2>
-                        <h4>2023.07~2024.05</h4>
+                        <h4>2023.06~2024.05</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
