--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="skills">
         <div class="mark1"></div>
         <div class="mark2"></div>
-        <h1 class="animate__animated">Skills</h1>
+        <h1 class="animate__animated">Skills for my engineer career</h1>
         <ul>
             <li>
                 <img src="images/html.png" alt="">
