--- a/plan.html
+++ b/plan.html
@@ -14,6 +14,16 @@
     <link rel="stylesheet" href="css/plan.css">
     <link rel="icon" href="images/cat-kitty-kitten-feline-svgrepo-com.svg">
     <title>Lemon Lin | My Basic Infomation</title>
+    <script>
+        (function(d, s, id) {
+        var js, timetacojs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); 
+        js.id = id;
+        js.src ='https://www.timetaco.com/static/js/embed.js';
+        timetacojs.parentNode.insertBefore(js, timetacojs);}
+        (document, 'script', 'timetaco-jssdk'));
+    </script>
 </head>
 <body>
     <div class="header">
@@ -38,6 +48,7 @@
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
     </div>
+    <div class='timetaco-list taco' data-timetacoid='junjku'></div>
     <div class="main">
         <span class="date">建立：2022.07.23</span>
         <h1>Plan for My dream</h1>
@@ -116,7 +127,7 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
                         <h2> Java OCPJP SE 11 國證</h2>
-                        <h4>2023.09</h4>
+                        <h4>2022.09</h4>
                     </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
@@ -164,7 +175,7 @@
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
                         <h2> Java OCE JWCD 國證</h2>
-                        <h4>2024.06</h4>
+                        <h4>2023.06</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
