--- a/plan.html
+++ b/plan.html
@@ -48,7 +48,7 @@
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
     </div>
-    <div class='timetaco-list taco' data-timetacoid='junjku'></div>
+    <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:3px;"></div>
     <div class="main">
         <span class="date">建立：2022.07.23</span>
         <h1>Plan for My dream</h1>
@@ -147,7 +147,7 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>大學畢業</h2>
-                    <h4>2025.06.30</h4>
+                    <h4>2025.06</h4>
                 </div>
                 </div>
                 
@@ -173,19 +173,34 @@
                         <h4>2023.03.17~2023.05.22</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc2-box">
+                        <h2>Java OCE 考前衝刺</h2>
+                        <h4>2023.03.17~2023.05.22</h4>
+                    </div>
+                    <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
                         <h2> Java OCE JWCD 國證</h2>
                         <h4>2023.06</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
-                        <h2> Java 企業專題實作</h2>
+                        <h2> Java 企業框架實作</h2>
                         <h4>2023.06~2024.05</h4>
                     </div>
                     <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box">
                         <h2>Java 工程師研習結束</h2>
                         <h4>2024.05</h4>
+                    </div>
+                    <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box fc-box">
+                        <h2>後端工程師企業實習（一）</h2>
+                        <h4>2024.07.01~2024.11.31</h4>
+                    </div>
+                    <i class="fa-solid fa-arrow-down ic-row"></i>
+                    <div class="session-box">
+                        <h2>大學畢業</h2>
+                        <h4>2025.06</h4>
                     </div>
                 </div>
             </div>
