--- a/plan.html
+++ b/plan.html
@@ -54,7 +54,7 @@
         <h1>Plan for My dream</h1>
         <div class="main-box">
             <div class="fed">
-                <h1>Front-End Develope (副修）</h1>
+                <h1>Front-End Developer (副修）</h1>
                 <div class="session-box">
                     <h2>Html/CSS</h2>
                     <h4>2022.07.01~2022.07.07</h4>
