--- a/plan.html
+++ b/plan.html
@@ -10,6 +10,8 @@
     <script src="js/index.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/plan.css">
     <link rel="icon" href="images/cat-kitty-kitten-feline-svgrepo-com.svg">
@@ -48,7 +50,28 @@
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
     </div>
+   
     <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:3px;"></div>
+    <div class="ocp">
+        <div class="ocp-list">
+            <h1>OCPJP Todo-List</h1>
+            <ul>
+                <li>1. Java Data Type <i class="fa-regular fa-circle-check check"></i></li>
+                <li>2. Controlling Program Flow <i class="fa-regular fa-circle-check check"></i></li>
+                <li>3. Java Object-oriented Approach <i class="fa-regular fa-circle-check check"></i></li>
+                <li>4. Exception Handling <i class="fa-solid fa-person-running run"></i></li>
+                <li>5. Working with Arrays and Collections</li>
+                <li>6. Working with Streams and Lambda expressions</li>
+                <li>7. Java Platform Module System</li>
+                <li>8. Concurrency</li>
+                <li>9. Java I/O API</li>
+                <li>10. Secure Coding in Java SE Application</li>
+                <li>11. Database Applications with JDBC</li>
+                <li>12. Localization</li>
+                <li>13. Annotations</li>
+            </ul>
+        </div>
+    </div>
     <div class="main">
         <span class="date">建立：2022.07.23</span>
         <h1>Plan for My dream</h1>
@@ -280,5 +303,7 @@
         </div>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
 <script src="https://kit.fontawesome.com/026fbb8b51.js" crossorigin="anonymous"></script>
 </html>
