--- a/process.html
+++ b/process.html
@@ -87,7 +87,7 @@
             <div class="pt-net-right">
                 <div class="net-content">
                     <div class="img">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1Vlrn-n0VGjdLidFnA4frOEHM9ePbfcob"><img src="images/text-1.png" alt="">
+                        <a target="_blank" href="https://drive.google.com/file/d/164xCNM17mWuXf7zhpX61SpHI9LOkf_xC/view?usp=sharing"><img src="images/text-1.png" alt="">
                         <div class="img-span">
                             <p>進入頁面</p>
                         </div></a>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="net-content">
                     <div class="img">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1Vlrn-n0VGjdLidFnA4frOEHM9ePbfcob"><img src="images/text-3.png" alt="">
+                        <a target="_blank" href="https://drive.google.com/file/d/1ApcLIpwUxr_McmKekWcDZNw-6RyUg6ku/view?usp=sharing"><img src="images/text-3.png" alt="">
                         <div class="img-span">
                             <p>進入頁面</p>
                         </div></a>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="net-content">
                     <div class="img">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1Vlrn-n0VGjdLidFnA4frOEHM9ePbfcob"><img src="images/text-4.png" alt="">
+                        <a target="_blank" href="https://drive.google.com/file/d/1AFAleEsYV5DoYJ0krqJZHimAlBxbv-QN/view?usp=sharing"><img src="images/text-4.png" alt="">
                         <div class="img-span">
                             <p>進入頁面</p>
                         </div></a>
