--- a/plan.html
+++ b/plan.html
@@ -59,8 +59,8 @@
                 <li>1. Java Data Type <i class="fa-regular fa-circle-check check"></i></li>
                 <li>2. Controlling Program Flow <i class="fa-regular fa-circle-check check"></i></li>
                 <li>3. Java Object-oriented Approach <i class="fa-regular fa-circle-check check"></i></li>
-                <li>4. Exception Handling <i class="fa-solid fa-person-running run"></i></li>
-                <li>5. Working with Arrays and Collections</li>
+                <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i></li>
+                <li>5. Working with Arrays and Collections<i class="fa-solid fa-person-running run"></i></li>
                 <li>6. Working with Streams and Lambda expressions</li>
                 <li>7. Java Platform Module System</li>
                 <li>8. Concurrency</li>
